# MISEN

./: CMakeLists.txt  README.md  isen.cfg
Framework/: CMakeLists.txt
Framework/include/: crypto.h  definitions.h  extern_lib.h  ocall_wrapper.h  outside_util.h  trusted_crypto.h  trusted_mbedtls.h  trusted_util.h  untrusted_crypto.h  untrusted_util.h  untrusted_util_tls.h
Framework/src/Client/: CMakeLists.txt  Client.cpp  Client.h  ImageSearch.cpp  ImageSearch.h  bisen_tests.cpp  bisen_tests.h  client_training.cpp  client_training.h  crypto.cpp  crypto.h  misen_tests.cpp  misen_tests.h  util.cpp  util.h  visen_tests.cpp  visen_tests.h
Framework/src/Client/rbisen/: ClientCrypt.c  EnglishAnalyzer.cpp  EnglishAnalyzer.h  SseClient.cpp  SseClient.hpp
Framework/src/Common/: net_util.cpp  time_util.cpp  time_util.h
Framework/src/Iee/: CMakeLists.txt  Enclave.cpp  Enclave.edl  Enclave.h  crypto.cpp  outside_util.cpp  trusted_crypto.cpp  trusted_util.cpp  untrusted_util.cpp
Framework/src/Iee/mbedtls/: ecalls.cpp  s_server.c  ssl_conn_hdlr.cpp  ssl_conn_hdlr.h
Framework/src/Iee/ocall_wrappers/: internal_ocall_wrapper.h  ocall_wrapper.cpp
Framework/src/Iee/sgx_config/: Enclave.config.xml
Framework/src/Iee/threading/: Worker.h  thread_handler.cpp  thread_handler.h
Framework/src/IeeComm/: App.cpp  App.h  CMakeLists.txt  server.cpp  server.h
Framework/src/IeeComm/mbedtls/: m_server.cpp  mbedtls_net.c  mbedtls_net.h  mserverDEBUG.h
Framework/src/IeeComm/ocall/: ocall.cpp  ocall.h
Framework/src/IeeComm/threading/: thread_pool.h
Framework/src/LibTrusted/: CMakeLists.txt  outside_util.cpp  trusted_crypto.cpp  trusted_util.cpp
Framework/src/LibTrustedSim/: CMakeLists.txt  sim_outside_util.cpp  sim_trusted_crypto.cpp
Framework/src/LibUntrusted/: CMakeLists.txt  secure_conn.cpp  untrusted_crypto.cpp  untrusted_util.cpp
Framework/src/LibUntrustedTLS/: CMakeLists.txt  untrusted_util_tls.cpp
Framework/src/StorageService/: CMakeLists.txt  SseServer.cpp  StorageServer_old.cpp
Framework/src/Uee/: CMakeLists.txt  MapUtil.h  Server.cpp  Server.h  SseServer.cpp  SseServer.h  StorageServer.cpp  StorageServer.h
Framework/src/UeeBisen/: CMakeLists.txt  SseServer.cpp  SseServer.hpp  cassie.cpp  cassie.h
Framework/src/Util/: CMakeLists.txt  net_util.cpp  net_util.h  time_util.cpp
ImageSearch/: CMakeLists.txt
ImageSearch/include/: trusted.h  untrusted.h
ImageSearch/src/: img_processing.cpp  img_processing.h  imgsrc_definitions.h  internal_trusted.h  internal_untrusted.h  parallel.cpp  parallel.h  repository.cpp  repository.h  scoring.cpp  scoring.h  training.cpp  training.h  trusted.cpp  untrusted.cpp  util.cpp  util.h
ImageSearch/src/kmeans/: bagofwords.h  kmeans.cpp
ImageSearch/src/kmeans-partial/: bagofwords.cpp  bagofwords.h  kmeans.cpp  kmeans.h  util.cpp  util.h
ImageSearch/src/rbisen/: IeeCrypt.cpp  IeeCrypt.h  QueryEvaluator.cpp  SseIee.cpp  SseIee.h
ImageSearch/src/rbisen/util/: IeeUtils.h  vec_int.cpp  vec_int.h  vec_token.cpp  vec_token.h
ImageSearch/src/seq-kmeans/: bagofwords.cpp  bagofwords.h  kmeans.cpp  kmeans.h  util.cpp  util.h
ImageSearch/src/training/: bagofwords.cpp  bagofwords.h  util.cpp  util.h
ImageSearch/src/training/kmeans-partial/: kmeans.cpp  kmeans.h
ImageSearch/src/training/lsh/: lsh.cpp  lsh.h
ImageSearch/src/training/seq-kmeans/: kmeans.cpp  kmeans.h
ImageSearch/src/w-kmeans/: bagofwords.cpp  bagofwords.h  kmeans.cpp  kmeans.h  util.cpp  util.h
SimFramework/: CMakeLists.txt
SimFramework/include/: definitions.h  outside_util.h  trusted_crypto.h  trusted_util.h
SimFramework/src/Client/: CMakeLists.txt  Client.cpp  Client.h  ImageSearch.cpp  ImageSearch.h  bisen_tests.cpp  misen_tests.cpp  misen_tests.h  util.cpp  util.h  visen_tests.cpp  visen_tests.h
SimFramework/src/Client/rbisen/: SseClient.cpp  SseClient.hpp
SimFramework/src/Iee/: CMakeLists.txt  Enclave.cpp
SimFramework/src/IeeComm/: App.cpp  App.h  CMakeLists.txt
SimFramework/src/IeeComm/ocall/: ocall.h
SimFramework/src/IeeComm/threading/: thread_pool.cpp  thread_pool.h
SimFramework/src/LibTrusted/: CMakeLists.txt  outside_util.cpp  trusted_crypto.cpp  trusted_util.cpp
SimFramework/src/LibUntrusted/: CMakeLists.txt  secure_conn.cpp  untrusted_util.cpp
SimFramework/src/StorageService/: CMakeLists.txt  SseServer.cpp  SseServer.hpp
SimFramework/src/Uee/: CMakeLists.txt  Server.cpp  StorageServer.cpp
SimFramework/src/UeeBisen/: main.cpp
